<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GalleryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_120"
        android:background="@color/color_card_ripple"
        app:elevation="0dp"
        android:fitsSystemWindows="true"
        app:layout_scrollFlags="scroll|enterAlways">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_126"
            android:layout_marginTop="-16dp"
            android:paddingBottom="@dimen/dp_10"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/dp_16"
            app:contentPadding="0dp"
            app:cardUseCompatPadding="false"
            app:cardElevation="@dimen/dp_8">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dp_16"
                android:background="@color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pix My Wall"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_20"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/imageView" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/searchInputLayout"
                    style="@style/Widget.AppTheme.TextInputLayout.OutlinedBox.White"
                    android:hint="@string/search_hint"
                    android:windowSoftInputMode="adjustResize"
                    app:endIconMode="clear_text"
                    android:layout_marginHorizontal="@dimen/dp_8"
                    android:layout_marginBottom="@dimen/dp_10"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/searchInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/round_search_24"
                        android:drawablePadding="@dimen/dp_8"
                        android:drawableTint="@color/edittext_icon_tint_color_white"
                        android:importantForAutofill="no"
                        android:imeOptions="actionSearch"
                        android:inputType="textNoSuggestions"/>

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_card_ripple"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/pixWallRecycler"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingVertical="@dimen/dp_8"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:spanCount="2"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/list_item_pix_wall"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <Button
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView android:id="@+id/emptyList"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_results"
            android:textSize="@dimen/sp_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>